force-app/main/default/objects/AI_Interaction__c/fields/Context_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Context_Snapshot__c</fullName>
    <description
  >JSON of the sanitized context actually sent to the provider (post AI_Context_Policy__mdt allowlist/redaction) - the audit record proves what was sent, not what could have been sent.</description>
    <label>Context Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>