force-app/main/default/objects/AI_Interaction__c/fields/Grounding_Source_Count__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Source_Count__c</fullName>
    <label>Grounding Source Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>