force-app/main/default/objects/AI_Interaction__c/fields/Prompt_Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template_Key__c</fullName>
    <label>Prompt Template Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>