force-app/main/default/objects/AI_Interaction__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AI Interactions</relationshipLabel>
    <relationshipName>AI_Interactions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>