force-app/main/default/objects/AI_Interaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Succeeded</fullName>
                <default>true</default>
                <label>Succeeded</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Blocked-Policy</fullName>
            </value>
            <value>
                <fullName>Blocked-Quota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>