force-app/main/default/objects/AI_Interaction__c/fields/Token_Count__c.field-meta.xml
<CustomField>
    <fullName>Token_Count__c</fullName>
    <label>Token Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>