force-app/main/default/objects/AI_Interaction__c/fields/Use_Case_Key__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Key__c</fullName>
    <description
  >Matches an AI_Context_Policy__mdt/AI_Action_Policy__mdt/AI_Usage_Policy__mdt/AI_Grounding_Source__mdt Use_Case_Key__c - the single key that ties one governed AI capability's policy rows together.</description>
    <label>Use Case Key</label>
    <length>80</length>
    <type>Text</type>
    <required>true</required>
</CustomField>